# sylphy

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  DEVELOPMENT.md  README.md  notes.md  prek.toml  pyproject.toml  setup.py
.github/workflows/: examples.yml  pre-commit.yml  prek.yml  publish-pypi.yml  tests.yml
config_demos/: demo_config_pca.json  demo_config_tsne.json
dip_paper/: checkin_data_1009.ipynb  process_raw_data.ipynb
dip_paper/curve/: spectrum_curve_MD1_159.txt  spectrum_curve_MD1_30.txt  spectrum_curve_MD1_54.txt  spectrum_curve_MD2_169.txt  spectrum_curve_MD2_28.txt  spectrum_curve_MD2_30.txt  spectrum_curve_MD3_194.txt  spectrum_curve_MD3_327.txt  spectrum_curve_WT_310.txt  spectrum_curve_WT_321.txt
dip_paper/line/: spectrum_line_MD1_159.txt  spectrum_line_MD1_30.txt  spectrum_line_MD1_54.txt  spectrum_line_MD2_169.txt  spectrum_line_MD2_28.txt  spectrum_line_MD2_30.txt  spectrum_line_MD3_194.txt  spectrum_line_MD3_327.txt  spectrum_line_WT_310.txt  spectrum_line_WT_321.txt
examples/: 1_quick_start.ipynb  1_quick_start_encoders.ipynb  1_quick_start_encoders.py  2_simple_demo_embedding_extractor.py  3_quick_start_reduction_process.ipynb  3_quick_start_reduction_process.py  4_demo_embedding_different_layers.py  README.md  encoder_sequences_using_sylphy.py  example_embedding_extraction.py  extract_embedding_using_sylphy.py  run_ci_examples.sh
protein_representation/: __init__.py
protein_representation/cli/: cache.py  encoder_sequences.py  get_embeddings.py  main.py  reduce.py
protein_representation/constants/: config_constants.py  logging_constants.py  tool_constants.py
protein_representation/core/: __init__.py  config.py  model_register.py  model_registry.py
protein_representation/embedding_extractor/: ankh2_based.py  bert_based.py  embedding_based.py  embedding_factory.py  esm_based.py  esmc_based.py  logging_config.py  mistral_based.py  prot5_based.py
protein_representation/logging/: __init__.py  logging_config.py
protein_representation/misc/: __init__.py  cli_constants.py  constants.py  logging_config.py  structure_constants.py  utils_lib.py
protein_representation/reductions/: factory.py  non_linear_reductions.py  reduction_methods.py
protein_representation/sequence_encoder/: __init__.py  base_encoder.py  factory.py  fft_encoder.py  frequency_encoder.py  kmers_encoder.py  logging_config.py  one_hot_encoder.py  ordinal_encoder.py  physicochemical_encoder.py
results/: emb_esm2.parquet
sylphy/: __init__.py  types.py
sylphy/cli/: __init__.py  _enums.py  _shared.py  cache.py  embed.py  encode.py  encoder_sequences.py  get_embeddings.py  main.py  reduce.py
sylphy/constants/: __init__.py  cli_constants.py  config_constants.py  logging_constants.py  tool_configs.py  tool_constants.py
sylphy/core/: __init__.py  config.py  model_registry.py  model_spec.py  optional_dependencies.py
sylphy/embedding_extractor/: __init__.py  ankh2_based.py  ankh2_embedding.py  bert_based.py  embedding_base.py  embedding_based.py  embedding_factory.py  esm_based.py  esm_embedding.py  esmc_based.py  esmc_embedding.py  mistral_based.py  mistral_embedding.py  prot5_based.py  prot_bert_embedding.py  prot_t5_embedding.py
sylphy/logging/: __init__.py  logging_config.py
sylphy/misc/: __init__.py  utils_lib.py
sylphy/reductions/: __init__.py  factory.py  linear_reductions.py  non_linear_reductions.py  reduction_methods.py
sylphy/sequence_encoder/: __init__.py  base_encoder.py  encoder_base.py  factory.py  fft_encoder.py  frequency_encoder.py  kmer_encoder.py  kmers_encoder.py  one_hot_encoder.py  ordinal_encoder.py  physicochemical_encoder.py
tests/: conftest.py
tests/cli/: conftest.py  test_embed_cli.py  test_encode_cli.py  test_encode_sequences_cli.py  test_get_embeddings_cli.py  test_main_help.py  test_reduce_cli.py
tests/core/: conftest.py  test_core_registry.py  test_core_revision_and_errors.py  test_optional_dependencies.py  test_public_api.py
tests/embedding_extraction/: conftest.py  test_base_loading_and_pooling.py  test_factory_routing_and_logging.py  test_init_and_lazy_exports.py  test_oom_backoff.py
tests/embedding_extractor/: conftest.py  test_base_loading_and_pooling.py  test_esmc_embedding.py  test_factory_routing_and_logging.py  test_init_and_lazy_exports.py  test_oom_backoff.py  test_optional_dependency_errors.py
tests/logging/: conftest.py  test_logging_setup.py
tests/misc/: test_parquet_optional_dependency_errors.py
tests/reductions/: conftest.py  test_factory.py  test_linear_reductions.py  test_non_linear_reductions.py  test_public_api_and_helpers.py  test_validation_errors.py
tests/sequence_encoder/: conftest.py  test_factory_and_exports.py  test_fft_encoder.py  test_kmers_tfidf.py  test_ordinal_onehot_frequency.py  test_physicochemical_encoder.py  test_validation_failures.py
