[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sylphy"
dynamic = ["version"]
description = "Protein sequence representation: encoders, embeddings, and reductions."
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.11,<3.13"
authors = [
    { name = "Kren AI Lab", email = "krenai@umag.cl" },
]
keywords = [
    "AAindex",
    "ESM",
    "ProtBERT",
    "ProtT5",
    "bioinformatics",
    "dimension-reduction",
    "embeddings",
    "k-mers",
    "protein",
    "transformers",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "appdirs>=1.4.4,<2.0",
    "huggingface-hub>=0.36.0,<1.0",
    "joblib>=1.5.2,<2.0",
    "numpy>=2.3.4,<3.0",
    "pandas>=2.3.3,<3.0",
    "rich>=14.2.0,<15.0",
    "scikit-learn>=1.7.2,<2.0",
    "typer>=0.20.0,<1.0",
]

[project.optional-dependencies]
all = [
    "accelerate>=1.11,<2.0",
    "biopython>=1.85,<2.0",
    "biotite>=1.5.0,<2.0",
    "clustpy>=0.0.2,<1.0",
    "esm>=3.0.3,<4.0; platform_system!='Windows'",
    "fastparquet>=2024.11.0",
    "igraph>=1.0.0,<2.0",
    "pyarrow>=21.0.0; platform_python_implementation!='PyPy'",
    "safetensors>=0.6.2,<1.0",
    "sentencepiece>=0.2.1,<1.0",
    "torch>=2.9.0,<3.0",
    "transformers>=4.57.1,<5.0",
    "tslearn>=0.6.3,<1.0",
    "umap-learn>=0.5.9,<1.0",
]
bio = [
    "biopython>=1.85,<2.0",
    "biotite>=1.5.0,<2.0",
]
dev = [
    "build~=1.3.0",
    "mypy~=1.18.0",
    "pytest~=8.4.2",
    "ruff~=0.14.0",
    "taskipy~=1.14.0",
    "twine~=6.0.0",
]
embeddings = [
    "accelerate>=1.11,<2.0",
    "esm>=3.0,<4.0; platform_system!='Windows'",
    "safetensors>=0.6.2,<1.0",
    "sentencepiece>=0.2.1,<1.0",
    "torch>=2.9.0,<3.0",
    "transformers>=4.57.1,<5.0",
]
graph = [
    "igraph>=1.0.0,<2.0",
]
parquet = [
    "fastparquet>=2024.11.0",
    "pyarrow>=21.0.0; platform_python_implementation!='PyPy'",
]
reductions = [
    "clustpy>=0.0.2,<1.0",
    "tslearn>=0.6.3,<1.0",
    "umap-learn>=0.5.9,<1.0",
]
tests = [
    "pytest-cov~=7.0.0",
    "pytest~=8.4.2",
]

[project.scripts]
sylphy = "sylphy.cli.main:app"

[project.urls]
Documentation = "https://github.com/KREN-AI-Lab/sylphy#readme"
Homepage = "https://github.com/KREN-AI-Lab/sylphy"
Issues = "https://github.com/KREN-AI-Lab/sylphy/issues"
Source = "https://github.com/KREN-AI-Lab/sylphy"

[tool.hatch.version]
path = "sylphy/__init__.py"
pattern = '__version__ = "(?P<version>[^"]+)"'

[tool.hatch.build.targets.sdist]
include = [
    "/sylphy",
]

[tool.ruff]
line-length = 110
target-version = "py313"

[tool.ruff.lint]
select = ["F", "W", "E", "I", "A", "B", "N"]

[tool.taskipy.tasks]
sort-imports = "ruff check --fix --select I sylphy/ tests/"
format = "task sort-imports && ruff format sylphy/ tests/"
lint = "ruff check sylphy/ tests/"
lint-fix = "ruff check --fix sylphy/ tests/"
test = "pytest -q"
test-v = "pytest -v"
test-cov = "pytest --cov=sylphy --cov-report=html"
